# yoisho-clicker

./: .gitignore  CNAME  README.md  index.html  package-lock.json
.github/workflows/: deploy.yml
_app/: version.json
_app/immutable/assets/: 0.ee62464e.css  2.27ec1b99.css  2.3f8d169b.css  2.76149834.css  2.f2730dd9.css  _layout.41226994.css  _page.15412866.css  _page.1bdbb327.css  _page.26c5c9b9.css  _page.fa1e4871.css
_app/immutable/chunks/: index.66b76caa.js  index.9f0d1e5a.js  index.b73f83ad.js  index.d960d171.js  singletons.0c5c2f6b.js  singletons.1f8ed66a.js  singletons.3504b1ff.js  singletons.41a838a7.js  singletons.52c1f9a8.js  singletons.5bde7ce0.js  singletons.5de1ce20.js  singletons.607ac6bf.js  singletons.6f80c4ac.js  singletons.aaf9e079.js  singletons.ab28c5b0.js  singletons.b721498a.js  singletons.bab81f93.js  singletons.c5b909e2.js  singletons.c6d3a23f.js  singletons.cccf8ecb.js  singletons.e1e99d88.js  singletons.e7a50ec9.js  singletons.f8011d42.js  singletons.f929e003.js
_app/immutable/entry/: app.0e98e49c.js  app.14127bb8.js  app.16e15472.js  app.1af497d0.js  app.26a80b9d.js  app.4d263cb9.js  app.6cb5b7ef.js  app.88e6d184.js  app.91c0b122.js  app.92232741.js  app.9be16829.js  app.a670a8e8.js  app.aa2275d1.js  app.b82a48e7.js  app.c878abbc.js  app.cc3c2fa6.js  app.d5967e5e.js  app.e0e4291c.js  app.e39d32ad.js  app.feec43f5.js  (+20 more)
server/: .env  .gitignore  Cargo.toml  README.md  db_init.sql  restart.sh
server/src/: counter.rs  main.rs  sound.rs
site/: .eslintrc.cjs  README.md  package-lock.json  package.json  svelte.config.js
site/src/: app.html
site/static/: CNAME
(+51 files in other folders)
