[package]
name = "yoisho-clicker-server"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"

[[bin]]
name = "yoisho-server"
path = "src/main.rs"

[dependencies]
axum = "0.6.18"
clap = { version = "4.2.7", default-features = false, features = [
    "std",
    "derive",
] }
serde = { version = "1.0.163", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.28.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
